Add JavaFX support
Add JavaFX SDK
Update buildrun.sh to support building JavaFX modules
  - requires Java 9 or later (I used 11)
  - disable graphics acceleration
Added basic HelloWorld GUI for CSV wizard

Signed-off-by: Cody D'Ambrosio <cjd218@lehigh.edu>